# Krino

./: .git-commit-template.txt  .gitignore  .vercel-deployment-checklist.md  CHANGES_SUMMARY.md  CV_UPLOAD_FIX.md  DEPLOYMENT.md  DEPLOYMENT_VERCEL.md  FIX_SUMMARY.md  PROJECT_DEEPDIVE.md  README.md  README_DEPLOYMENT_DOCS.md  SUPABASE_MIGRATION.md  SUPABASE_SETUP.md  debug_app.py  debug_imports.py  debug_output.txt  docker-compose.yml  env.download  package-lock.json  package.json  pyproject.toml  read_pdf.py  requirements.txt  supabase-setup.sql  vercel.json
api/: index.py  test.py
backend/: .gitignore  Dockerfile  README.md  db.py  drop_tables.py  migrate_add_extracted_cv.py  pathwise.db  requirements.txt
backend/app/: main.py
backend/docs/: CV_UPLOAD_API.md  RELATIONSHIPS.md  analysis.md  parsing.md
docs/backend/: chat-context.md  chat-integration-README.md  versioning.md
frontend/: .env.example  .env.local  error.html  middleware.ts  next.config.mjs  package-lock.json  package.json  tailwind.config.ts  tsconfig.tsbuildinfo
frontend/app/: globals.css  index.css  layout.tsx  page.tsx
frontend/components/: CoverLetterGenerator.tsx  EmailConfirmBanner.tsx  JobDescriptionLibrary.tsx  KeywordGapDiff.tsx  LanguageSwitcher.tsx  OnboardingChecklist.tsx  Preloader.tsx  Protected.tsx  ScoreTimeline.tsx  TabNav.tsx  ThemeToggle.tsx
frontend/hooks/: use-translation.ts  useJDLibrary.ts  useLocale.ts  useTranslation.ts
frontend/lib/: api.ts  pdf-parse.ts  supabase.ts  tts.ts
frontend/locales/: en.json  fr.json
frontend/providers/: AuthProvider.tsx
(+200 files in other folders)
