[project]
name = "app"
version = "0.1.0"
description = "Krino CV Analysis Backend"
requires-python = ">=3.12"
dependencies = [
    "fastapi",
    "uvicorn",
    "SQLAlchemy",
    "pydantic",
    "pydantic-settings",
    "python-dotenv",
    "python-multipart",
    "python-jose[cryptography]",
    "passlib[bcrypt]",
    "groq",
    "PyPDF2",
    "docx2txt",
    "textstat",
    "email-validator",
    "psycopg2-binary",
]
